@@ -235,6 +235,17 @@ bool show_types( cdecl_show_t show, char const *glob, unsigned decl_flags,
 
   c_typedef_visit( &show_type_visitor, &sti );
 
+  if ( !sti.showed_any && (show & CDECL_SHOW_USER_DEFINED) != 0 &&
+       glob != NULL && strchr( glob, '*' ) == NULL ) {
+    //
+    // We didn't show any specific user-defined types, so try showing specific
+    // predefined types.
+    //
+    sti.show &= ~STATIC_CAST( unsigned, CDECL_SHOW_USER_DEFINED );
+    sti.show |= CDECL_SHOW_PREDEFINED;
+    c_typedef_visit( &show_type_visitor, &sti );
+  }
+
   c_sglob_cleanup( &sti.sglob );
   return sti.showed_any;
 }
